Issue #1484728 by gopisundar: Arrow picture not displaying while the mouse button is over the picture on IE8-9

--- a/scroll_to_top.css
+++ b/scroll_to_top.css
@@ -39,7 +39,11 @@ body {
 	height: 50px;
 	display: block;
 	margin-bottom: 7px;
-	background: #ddd url(up-arrow.png) no-repeat center center;
+	background-color: #ddd; 
+	background-position: center center;
+	background-repeat: no-repeat;
+	
+	background-image: url('up-arrow.png') ;
 	opacity:0.8;
 	filter:alpha(opacity = 80);
 	/* rounded corners */
@@ -52,8 +56,8 @@ body {
 	transition: 1s;
 }
 #back-top a:hover span#button, #back-top-prev a:hover span#button-prev {
-	/*opacity:1;
-	filter:alpha(opacity = 100);*/
+	opacity:1;
+	filter:alpha(opacity = 100);
 }
 #edit-scroll-to-top-preview{
 float:right;
